Sun Sep 27 01:49:26 PDT 1998 Manish Singh <yosh@gimp.org>

	* Made 1.0.1 release

Mon Sep 21 02:11:27 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/text_tool.c: correct test for restoring old foundry in
	callback (from Trent Piepho)

	* plug-ins/gauss_iir/gauss_iir.c
	* plug-ins/gauss_rle/gauss_rle.c: better test for bad values,
	put fix in gauss_rle too

	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/script-fu-console.[ch]: added an eval
	PDB interface for running arbitrary scheme code
        
	* app/batch.c: redid batch mode to use script-fu-eval

	* app/main.c: fixed command line parsing for batch mode and
	image loading

Tue Sep 15 21:27:10 BST 1998  Adam D. Moss <adam@gimp.org>

	* plug-ins/gif.c:
	The facility to specify the background colour of
	a transparent/animated GIF for non-transparent
	viewers now works very much more consistantly.
	The only situations in which it will fail to work
	as expected now are those where file size can be reduced
	(abeit not by much, as the plugin is sometimes more pessimistic
	than it need be) by re-using an existing unused colour
	index rather than using another bit per pixel in the
	encoded file.  That will never be an issue with an image
	which was freshly converted from RGB to INDEXED with the
	Quantize option, as that option removes any unused colours
	from the image.

	Let me know if you find the consistancy/size tradeoff more
	annoying than helpful and I can adjust it.  IMHO it is too
	arcane a feature to present to any user as a runtime option.

Wed Sep  9 02:41:36 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: added -std1 check for DU4

	* gimptool.1: updated man page

	* gimptool.in: added strip options

	* plug-ins/hrz/hrz.c: #ifndef'd NeXT out munmap call

	* plug-ins/maze/maze.c: commented out some debug code differently
	so NeXT compiler won't barf.

Sun Sep  6 12:48:32 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: see if CC needs -posix (for NeXTStep)
